--- a/style.css
+++ b/style.css
@@ -592,7 +592,11 @@ img[alt="Info icon"] {
 .g_id_signin {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 30px;
+}
+
+.g_id_signin div {
+    margin: 0 auto;
 }
 
 .hidden {
